# DronemakerClonev3

./: .gitignore  CMakeLists.txt  ENCODER_SYSTEM_ROADMAP.md  FUTURE_IDEAS.md  RASPBERRY_PI_ROADMAP.md  future-hardware-upgrade-paths.md
DronemakerClonev3/: DronemakerClonev3.jucer
DronemakerClonev3/Builds/MacOSX/: Info-App.plist
DronemakerClonev3/JuceLibraryCode/: JuceHeader.h
DronemakerClonev3/Source/: AutomationPresets.h  FFTProcessor.cpp  FFTProcessor.h  LoopAutomation.h  LoopAutomationEditor.cpp  LoopAutomationEditor.h  LoopBouncer.h  LoopRecorder.cpp  LoopRecorder.h  LoopSequenceExecutor.cpp  LoopSequenceExecutor.h  Main.cpp  MainComponent.cpp  MainComponent.h  PiLayout.cpp  PiLayout.h  VirtualEncoderBank.h
DronemakerClonev3/Source/Effects/: DelayEffect.cpp  DelayEffect.h  DistortionEffect.cpp  DistortionEffect.h  EffectBase.h  EffectsChain.cpp  EffectsChain.h  FilterEffect.cpp  FilterEffect.h  GranularEffect.cpp  GranularEffect.h  TapeEffect.cpp  TapeEffect.h  TremoloEffect.cpp  TremoloEffect.h
DronemakerClonev3/Source/Modulation/: ModulationManager.cpp  ModulationManager.h  ModulationPanel.h  ModulationSource.h
Teensy_4.1_Based_MCU/.history/: Teensy_4.1_Based_MCU.kicad_pcb
docs/audio-interface/: UM2_Teardown_v4.md
docs/midi-controller/: dronemaker-midi-controller-build-guide-v3.md  dronemaker-pcb-design-brief-230326 (1).md  netlist-verification-230326 (1).txt
docs/pi/: RASPBERRY_PI_ROADMAP.md
docs/reference/: DronemakerClone — Notepad.md
docs/software/: FUTURE_IDEAS.md  IMPLEMENTATION_CHECKLIST.md  LOOP_PLAYBACK_SYSTEMS.md
docs/vision/: DronemakerClone — Technical Brief.md  DronemakerClone — Vision Statement.md  DronemakerCloneSpec.md
firmware/DronemakerController/: DronemakerController.ino
firmware/tests/01_serial_hello/: 01_serial_hello.ino
firmware/tests/02_button_test/: 02_button_test.ino
firmware/tests/03_encoder_test/: 03_encoder_test.ino
firmware/tests/04_led_test/: 04_led_test.ino
firmware/tests/04b_led_diag/: 04b_led_diag.ino
hardware/enclosure/: FaceplateOriginal.step  Faceplate_v1.step  Faceplate_v2.step  Faceplate_v2_with_components.step  Faceplate_v3.step  Faceplate_v3_assembly.step  Faceplate_v3_with_components.step  Faceplate_v4.step  Faceplate_v4_assembly.step  Faceplate_v5.step  Faceplate_v5_assembly.step  Faceplate_v6.step  Faceplate_v6_assembly.step  Faceplate_v6_fix.step  Faceplate_v7.step  Faceplate_v7_assembly.step  Faceplate_v8.step  Faceplate_v8_assembly.step  Faceplate_v9.step  Faceplate_v9_assembly.step  add_component_models.py  analyze_display.py  analyze_faceplate.py  analyze_original.py  analyze_v6_fix.py  build_assembly_v3.py  cut_faceplate.py  cut_faceplate_v3.py  cut_faceplate_v4.py  cut_faceplate_v5.py  cut_faceplate_v6.py  cut_faceplate_v7.py  cut_faceplate_v8.py  cut_faceplate_v9.py  fix_faceplate.py  rebuild_faceplate.py  rebuild_faceplate_v2.py
hardware/midi-controller/: PCB_BUILD_CHECKLIST.md  Teensy_4.1_Based_MCU.kicad_pcb  Teensy_4.1_Based_MCU.kicad_prl  Teensy_4.1_Based_MCU.kicad_pro  Teensy_4.1_Based_MCU.kicad_sch  fp-info-cache  ~Teensy_4.1_Based_MCU.kicad_pro.lck
ledger/: FACEPLATE_DIMENSIONS.md  MODULES.yaml  PROJECT.md  ROADMAP.md  SHOPPING_LIST.md  adversarial-review-2026-04-15.md  adversarial-review-schematic-2026-04-15.md
ledger/components/: REGISTER.md
ledger/decisions/: LOG.md
ledger/subsystems/: audio-interface-um2.md  enclosure-faceplate.md  headphone-monitor.md  midi-controller.md  raspberry-pi-platform.md  software-dsp-engine.md  software-ui-control.md
ledger/verification/: datasheet-check.md  pcb-trace-check.md  schematic-check.md
pi-kiosk/: SETUP.md  dronemaker.service  kiosk-start.sh  update.sh
(+36 files in other folders)
